ChangeLog file for BBWin
==============================================================


BBWin 0.11 Preview version -  February 11th 2008
-------------------

* svcs centralized mode with autorestart option
* new agent to be used with centralized mode : filesystem.dll
  - file client-local.cfg implemented : support md5 and sha1 checksum algorythms
  - dir client-local.cfg implemented
  - logfile client-local.cfg implemented
  - linecount client-local.cfg implemented
  - back quoted for FILENAME and DIRECTORY implemented.
* eventlog client-local.cfg implemented : msgs.dll
* fix initialisation error on bbwinupdate agent
* prevent loading bbwin.cfg agent configurations when centralized mode enabled
* fix memory leak on bbwinupdate agent
* fix memory leak on service BBWin.exe when centralized mode enabled
* Use ip address instead of mac address for the graph title for network interfaces (ifstat)
* multiple bbdisplay supported when centralized mode enabled
* Who agent now use qwinsta executable output instead of native functions
* Centralized Mode implemented directly in future hobbit 4.3 and with a patch for hobbit 4.2


BBWin 0.10 Preview version -  December 30th 2007
-------------------

+New Features
* Msgs agent reports parts of description events when the message file contening the 
  static string can't be found. It will reports as the Windows Event Viewer, just like this :
  "The description for Event ID ( XXX ) in Source ( XXX ) cannot be found.
  The local computer may not have the necessary registry information or message
  DLL files to display messages from a remote computer. You may be able to use
  the /AUXSOURCE= flag to retrieve this description; see Help and Support for details.
  The following information is part of the event: XXXXX, XXXXX."
* You can use environment variables in the bbwinupdate agent. Example :
  <setting name="filename" value="bbwin\%COMPUTERNAME%.cfg" />
* svcs services rules can be used with comments